# png-reader

./: .gitignore  Makefile  README.md  autogen.sh  configure.ac  png-reader  png-reader.c  png-reader.h
src/: Makefile.am  byte.c  byte.h  crc.c  crc.h  main.c  main.h  png-chunk-bkgd.c  png-chunk-bkgd.h  png-chunk-builder.c  png-chunk-builder.h  png-chunk-chrm.c  png-chunk-chrm.h  png-chunk-gama.c  png-chunk-gama.h  png-chunk-hist.c  png-chunk-hist.h  png-chunk-iccp.c  png-chunk-iccp.h  png-chunk-idat.c  png-chunk-idat.h  png-chunk-iend.c  png-chunk-iend.h  png-chunk-ihdr.c  png-chunk-ihdr.h  png-chunk-itxt.c  png-chunk-itxt.h  png-chunk-phys.c  png-chunk-phys.h  png-chunk-plte.c  png-chunk-plte.h  png-chunk-sbit.c  png-chunk-sbit.h  png-chunk-splt.c  png-chunk-splt.h  png-chunk-srgb.c  png-chunk-srgb.h  png-chunk-text.c  png-chunk-text.h  png-chunk-time.c  (+21 more)
