bin_PROGRAMS = png-reader
png_reader_SOURCES = png-chunk.c png-chunk.h png-chunk-builder.c png-chunk-builder.h png-chunk-vector.c png-chunk-vector.h crc.c crc.h png-file.c png-file.h png-chunk-ihdr.c png-chunk-ihdr.h png-chunk-plte.c png-chunk-plte.h png-chunk-idat.c png-chunk-idat.h png-chunk-iend.c png-chunk-iend.h png-chunk-chrm.c png-chunk-chrm.h png-chunk-gama.c png-chunk-gama.h png-chunk-iccp.c png-chunk-iccp.h png-chunk-sbit.c png-chunk-sbit.h png-chunk-srgb.c png-chunk-srgb.h png-chunk-bkgd.c png-chunk-bkgd.h png-chunk-hist.c png-chunk-hist.h png-chunk-trns.c png-chunk-trns.h png-chunk-phys.c png-chunk-phys.h png-chunk-time.c png-chunk-time.h png-chunk-splt.c png-chunk-splt.h png-chunk-itxt.c png-chunk-itxt.h png-chunk-text.c png-chunk-text.h png-chunk-ztxt.c png-chunk-ztxt.h main.c main.h
png_reader_CFLAGS = -std=c99 -Wall -Werror
